<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llayout"
    tools:context=".AnalyzerActivity">

    <TextView
        android:id="@+id/textViewEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewEnter"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextTrial"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/buttonEval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="evalTrial"
        android:text="@string/btnEval" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/textViewResultOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/txtVResultOk"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        android:visibility="invisible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/textViewResultNok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/txtVResultNok"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        android:visibility="invisible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/textViewAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/textViewAgain"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:visibility="invisible"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="tryAgain"
        android:text="OK"
        android:visibility="invisible" />
</LinearLayout>